Final Project Submission/compiling_error.txt
C:\Users\ash\Documents\GitHub\cosc-a211-term-project-klfenasci\Final Project Submission\Fenasci_CosmaDogRPG.cpp: In function 'void intracoastalclub()':
C:\Users\ash\Documents\GitHub\cosc-a211-term-project-klfenasci\Final Project Submission\Fenasci_CosmaDogRPG.cpp:122:25: error: too many arguments to function 'void fight()'
   fight(pHealth, bHealth);
                         ^
C:\Users\ash\Documents\GitHub\cosc-a211-term-project-klfenasci\Final Project Submission\Fenasci_CosmaDogRPG.cpp:21:6: note: declared here
 void fight();
      ^~~~~
C:\Users\ash\Documents\GitHub\cosc-a211-term-project-klfenasci\Final Project Submission\Fenasci_CosmaDogRPG.cpp: In function 'void fight(int&, int&)':
C:\Users\ash\Documents\GitHub\cosc-a211-term-project-klfenasci\Final Project Submission\Fenasci_CosmaDogRPG.cpp:162:1: error: a function-definition is not allowed here before '{' token
 {
 ^
C:\Users\ash\Documents\GitHub\cosc-a211-term-project-klfenasci\Final Project Submission\Fenasci_CosmaDogRPG.cpp:166:1: error: expected '}' at end of input
 }
 ^
C:\Users\ash\Documents\GitHub\cosc-a211-term-project-klfenasci\Final Project Submission\Fenasci_CosmaDogRPG.cpp:127:1: note: to match this '{'
 {
 ^
